# gaggiapid2

./: .gitmodules  CMakeLists.txt  index.html
main/: CMakeLists.txt  Kconfig.projbuild  http_handlers.cpp  idf_component.yml  main.c  main.cpp  network.cpp  root.html  root_old.html
main/include/: global.h  http_handlers.h  network.h
